--- a/.github/workflows/main_asciiman.yml
+++ b/.github/workflows/main_asciiman.yml
@@ -29,8 +29,8 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Zip build output
+        run: zip -r release.zip dist
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -70,5 +70,5 @@ jobs:
         with:
           app-name: 'asciiman'
           slot-name: 'Production'
-          package: .
+          package: ./dist
           
