--- a/.github/workflows/main_asciiman.yml
+++ b/.github/workflows/main_asciiman.yml
@@ -21,22 +21,22 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: '18.x'
+          cache: 'npm'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Zip build output
-        run: zip -r release.zip dist
+      - name: Build
+        run: npm run build
+        env:
+          CI: false # Prevent treating warnings as errors
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: release.zip
+          name: dist
+          path: dist/
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,10 +52,8 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
+          name: dist
+          path: dist
       
       - name: Login to Azure
         uses: azure/login@v2
