Everything should be deployed under the same AppService in Azure, the frontend is already deployed. We need to update the package.json and workflow any anything else to build and deploy the new backend to the same AppService

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "server": "tsx watch server/index.ts",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && tsc -p server/tsconfig.json",
+    "build:server": "tsc -p server/tsconfig.json",
+    "start": "node dist-server/prod.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
