manual change: fix build issues

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "server": "tsx watch server/index.ts",
-    "build": "tsc -b && vite build && tsc -p server/tsconfig.json",
+    "build": "tsc -b && vite build && tsc -p server/tsconfig.json && npm run copy-prod",
     "build:server": "tsc -p server/tsconfig.json",
+    "copy-prod": "cp server/prod.ts dist-server/ && cd dist-server && tsc prod.ts --esModuleInterop --module ESNext",
     "start": "node dist-server/prod.js",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -39,5 +40,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
