--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,14 +2,17 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../dist-server",
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "target": "ES2020",
     "lib": ["ES2020"],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "noEmit": false,
+    "isolatedModules": true
   },
   "include": ["./**/*"],
   "exclude": ["../node_modules"]
