--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,19 +1,20 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../dist-server",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
     "target": "ES2020",
-    "lib": ["ES2020"],
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "allowJs": true,
+    "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "allowJs": true,
-    "noEmit": false,
-    "isolatedModules": true
+    "outDir": "../dist-server",
+    "declaration": false,
+    "declarationMap": false,
+    "sourceMap": false,
+    "removeComments": true
   },
-  "include": ["./**/*"],
-  "exclude": ["../node_modules"]
+  "include": ["index.ts"],
+  "exclude": ["node_modules"]
 } 
