--- a/web.config
+++ b/web.config
@@ -2,12 +2,12 @@
 <configuration>
   <system.webServer>
     <handlers>
-      <add name="iisnode" path="dist-server/prod.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="dist-server/server.js" verb="*" modules="iisnode" />
     </handlers>
     <rewrite>
       <rules>
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
-          <match url="^dist-server/prod.js\/debug[\/]?" />
+          <match url="^dist-server/server.js\/debug[\/]?" />
         </rule>
         <rule name="StaticContent">
           <action type="Rewrite" url="dist{REQUEST_URI}"/>
@@ -16,7 +16,7 @@
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
           </conditions>
-          <action type="Rewrite" url="dist-server/prod.js"/>
+          <action type="Rewrite" url="dist-server/server.js"/>
         </rule>
       </rules>
     </rewrite>
